--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-handlebars": "^7.0.1",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "sweetalert2": "^11.7.3"
   }
 }
