--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/martinjavier/entregable#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.1",
+    "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
     "mongoose-paginate-v2": "^1.7.1",
     "nodemon": "^2.0.20",
