--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "nodemon": "^2.0.20",
     "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
     "sweetalert2": "^11.7.3"
