--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/martinjavier/entregable#readme",
   "dependencies": {
+    "alert": "^5.1.4",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
